
2009-11-26  Rupert Germann <rupi@gmx.li>
	* added flashmessages icons for older TYPO3 versions to folder compat/gfx
	* changed "disallowed categories" message in tceforms to use flashmessages 
	* changed tt_news form: moved "hidden" field to the "General" tab and moved author-email to a palette (Thanks to Georg Ringer)
	* follow-up to feature #12118: removed tab "Typoscript" from flexform and moved the new "typoscript" field to the "other settings" tab
	* follow-up to feature #12118: added a condtion to the flexform field "typoscript" which hides this field from non-admin users
	* updated doc "changes in tt_news 3.0"
	* added feature #12763: integate possibility to convert tt_news to USER_INT using $this->cObj->convertToUserIntObject() 
	  (requires TYPO3 4.3 to work) (Thanks to Krystian Szymukowicz)
	* Started to update the tt_news manual

2009-11-25  Rupert Germann <rupi@gmx.li>
	* fix: ajax error in news-admin module when clicking the "show thumbs" checkbox in a list which shows news from a certain category
	* fixed bug #12750: added a new icon for the content element wizard (Thanks to Georg Ringer)
	* fixed bug #4488: update script not DBAL ready
	* fixed some wrong wording in code comments
	* fixed broken date in xml feeds (wrong "$this->$this" in class tx_ttnews)
	* fixed bug #12453: Invalid use of DISTINCT keyword leads ot invalid query when using DBAL (thanks to Xavier Perseguers)
	* fixed bug #12756: Queries for internal caching are not DBAL compatible
	* fixed bug #8307: Missing titles in the list module in the Backend (Thanks to Georg Ringer)
	* fixed bug #6300: tt_news - save & preview - not working with new records (Thanks to Martin Holtz)
	* fixed bug #12760: export button in news-admin module has wrong link
	* added feature #12118: integrate field with typoscript into flexform of tt_news (Thanks to Krystian Szymukowicz)
	* added feature #12401: Extend the use of generic markers in tt_news 3.0. genericMarkers can now be used in the